--- a/index.html
+++ b/index.html
@@ -63,61 +63,19 @@
               <option>早餐</option><option>午餐</option><option>晚餐</option><option>加餐</option>
             </select>
           </label>
-          <label class="wide">名称/描述 <input id="mealName" placeholder="例如：鸡腿饭 / 家常炒菜"></label>
-
-          <div class="split wide">
-            <div class="miniCard">
-              <div class="miniTitle">外部估算 1（可选）</div>
-              <div class="grid3">
-                <label>kcal <input id="kcal1" type="number" step="1" min="0"></label>
-                <label>P(g) <input id="p1" type="number" step="0.1" min="0"></label>
-                <label>C(g) <input id="c1" type="number" step="0.1" min="0"></label>
-                <label>F(g) <input id="f1" type="number" step="0.1" min="0"></label>
-              </div>
-              <div class="muted">例如 SnapCalorie / 其他 app 的结果。</div>
+          <label class="wide">名称/描述 <input id="mealName" placeholder="例如：白斩鸡 + 米饭；葡萄干 20 粒"></label>
+          <div class="miniCard wide">
+            <div class="miniTitle">结果（自动估算，可手改）</div>
+            <div class="grid3">
+              <label>kcal 中值 <input id="kcalFinal" type="number" step="1" min="0" placeholder="自动"></label>
+              <label>kcal 下限 <input id="kcalLow" type="number" step="1" min="0" placeholder="自动"></label>
+              <label>kcal 上限 <input id="kcalHigh" type="number" step="1" min="0" placeholder="自动"></label>
+              <label>不确定性 0~1 <input id="mealUnc" type="number" step="0.05" min="0" max="1" value="0.35"></label>
             </div>
-
-            <div class="miniCard">
-              <div class="miniTitle">外部估算 2（可选）</div>
-              <div class="grid3">
-                <label>kcal <input id="kcal2" type="number" step="1" min="0"></label>
-                <label>P(g) <input id="p2" type="number" step="0.1" min="0"></label>
-                <label>C(g) <input id="c2" type="number" step="0.1" min="0"></label>
-                <label>F(g) <input id="f2" type="number" step="0.1" min="0"></label>
-              </div>
-              <div class="muted">用来对照“最不确定的餐”。</div>
-            </div>
-
-            <div class="miniCard">
-              <div class="miniTitle">最终入账（你可改）</div>
-              <div class="grid3">
-                <label>kcal <input id="kcalFinal" type="number" step="1" min="0"></label>
-                <label>P(g) <input id="pFinal" type="number" step="0.1" min="0"></label>
-                <label>C(g) <input id="cFinal" type="number" step="0.1" min="0"></label>
-                <label>F(g) <input id="fFinal" type="number" step="0.1" min="0"></label>
-              </div>
-
-              <div class="row">
-                <button id="autoMergeMeal" class="btn ghost">用规则自动合并</button>
-                <button id="textEstimateMeal" class="btn ghost">根据文字估算范围</button>
-              </div>
-
-              <div class="row">
-                <div class="rangeInputs">
-                  <input id="kcalLow" type="number" step="1" min="0" placeholder="kcal 下限">
-                  <span class="rangeDash">—</span>
-                  <input id="kcalHigh" type="number" step="1" min="0" placeholder="kcal 上限">
-                </div>
-                <label class="inline">不确定性 0~1 <input id="mealUnc" type="number" step="0.05" min="0" max="1" value="0.35"></label>
-              </div>
-
-              <div id="mealTextSuggestions" class="muted"></div>
-              <div class="muted">建议：有克重/标签就尽量填更“窄”的范围；差异大时不要平均，直接手动改“最终入账/范围”。</div>
-            </div>
+            <div id="mealTextSuggestions" class="muted"></div>
+            <div class="muted">只写文字也会自动估算范围；你手动改过这些字段后将不再自动覆盖（把它们清空可恢复自动）。</div>
           </div>
-
-
-          <label class="wide">照片 <input id="mealPhoto" type="file" accept="image/*"></label>
+<label class="wide">照片 <input id="mealPhoto" type="file" accept="image/*"></label>
           <label class="wide">备注 <textarea id="mealNote" rows="3" placeholder="家常菜：食材/大概用量/吃了多少比例；包装食品：每份多少克等。"></textarea></label>
         </div>
 
@@ -198,6 +156,14 @@
           <label>静息心率 HRrest (bpm, 可选) <input id="hrrest" type="number" min="30" max="120" placeholder="例如 55"></label>
           <label>最大心率 HRmax (bpm, 可选) <input id="hrmax" type="number" min="120" max="240" placeholder="默认 220-年龄"></label>
           <label>训练能耗校准系数 (默认 1.00) <input id="calFactor" type="number" step="0.01" min="0.7" max="1.3" value="1.00"></label>
+
+          <label>每日目标 Target (kcal) <input id="kcalTarget" type="number" step="1" min="800" max="6000" placeholder="例如 2200"></label>
+          <label>预算口径 Budget
+            <select id="budgetMode">
+              <option value="mid" selected>按中值（更平衡）</option>
+              <option value="high">按上限（更保守）</option>
+            </select>
+          </label>
         </div>
         <div class="row">
           <button id="saveProfile" class="btn">保存</button>
