--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="card">
           <div class="cardTitle">今天</div>
           <div id="todaySummary" class="bigNumbers">加载中…</div>
-          <div class="muted">摄入来自你的“最终入账”；训练消耗来自手填或心率导入估算。</div>
+          <div class="muted">饮食默认记录为「范围」；汇总会按你选择的预算口径（中值/上限）来计算剩余预算。</div>
         </div>
 
         <div class="card">
@@ -48,7 +48,7 @@
       </div>
 
       <div class="card">
-        <div class="cardTitle">最近 7 天</div>
+        <div class="cardTitle">最近 7 天（按预算口径统计）</div>
         <div id="weekSummary" class="week"></div>
       </div>
     </section>
@@ -56,6 +56,7 @@
     <section id="view-meals" class="view">
       <div class="card">
         <div class="cardTitle">记录一餐</div>
+
         <div class="grid">
           <label>时间 <input id="mealTime" type="datetime-local"></label>
           <label>类型
@@ -63,7 +64,9 @@
               <option>早餐</option><option>午餐</option><option>晚餐</option><option>加餐</option>
             </select>
           </label>
+
           <label class="wide">名称/描述 <input id="mealName" placeholder="例如：白斩鸡 + 米饭；葡萄干 20 粒"></label>
+
           <div class="miniCard wide">
             <div class="miniTitle">结果（自动估算，可手改）</div>
             <div class="grid3">
@@ -75,13 +78,15 @@
             <div id="mealTextSuggestions" class="muted"></div>
             <div class="muted">只写文字也会自动估算范围；你手动改过这些字段后将不再自动覆盖（把它们清空可恢复自动）。</div>
           </div>
-<label class="wide">照片 <input id="mealPhoto" type="file" accept="image/*"></label>
-          <label class="wide">备注 <textarea id="mealNote" rows="3" placeholder="家常菜：食材/大概用量/吃了多少比例；包装食品：每份多少克等。"></textarea></label>
+
+          <label class="wide">照片（可选） <input id="mealPhoto" type="file" accept="image/*"></label>
+          <label class="wide">备注（可选） <textarea id="mealNote" rows="3" placeholder="写清楚份量会更准：例如“一碗米饭/180g”“一小把葡萄干(20粒)”"></textarea></label>
         </div>
 
         <div class="row">
           <button id="addMeal" class="btn">添加</button>
           <button id="clearMealForm" class="btn ghost">清空表单</button>
+          <span class="muted">无需按任何估算按钮，输入文字会自动估算。</span>
         </div>
       </div>
 
@@ -111,7 +116,7 @@
 
       <div class="card">
         <div class="cardTitle">导入心率 CSV（更准）</div>
-        <p class="muted">Zepp 的导出格式可能因设备/地区不同。本工具支持“选择列”映射：你只要导出 CSV（带时间戳 + 心率列）即可。</p>
+        <p class="muted">支持“选择列”映射：导出 CSV（带时间戳 + 心率列）即可。</p>
         <div class="row">
           <input id="hrCsv" type="file" accept=".csv,text/csv" />
           <button id="importHrCsv" class="btn">读取并映射</button>
@@ -157,11 +162,11 @@
           <label>最大心率 HRmax (bpm, 可选) <input id="hrmax" type="number" min="120" max="240" placeholder="默认 220-年龄"></label>
           <label>训练能耗校准系数 (默认 1.00) <input id="calFactor" type="number" step="0.01" min="0.7" max="1.3" value="1.00"></label>
 
-          <label>每日目标 Target (kcal) <input id="kcalTarget" type="number" step="1" min="800" max="6000" placeholder="例如 2200"></label>
-          <label>预算口径 Budget
+          <label>每日目标 Target kcal <input id="targetKcal" type="number" step="10" min="800" max="6000" placeholder="例如 2100"></label>
+          <label>预算口径 Budget mode
             <select id="budgetMode">
-              <option value="mid" selected>按中值（更平衡）</option>
-              <option value="high">按上限（更保守）</option>
+              <option value="mid" selected>按中值（mid）</option>
+              <option value="high">按上限（high，更保守）</option>
             </select>
           </label>
         </div>
@@ -169,7 +174,7 @@
           <button id="saveProfile" class="btn">保存</button>
           <button id="resetProfile" class="btn ghost">重置</button>
         </div>
-        <p class="muted">校准系数建议 0.90~1.10：当你发现“训练消耗长期偏高/偏低”时再调。</p>
+        <p class="muted">预算口径：你想更保守控热量，就用“按上限(high)”；日常更平衡，就用“按中值(mid)”。</p>
       </div>
     </section>
 
@@ -193,7 +198,7 @@
 
   <footer class="footer">
     <span id="status">准备就绪</span>
-    <span class="muted">提示：建议用 VSCode Live Server 打开（支持离线缓存）。</span>
+    <span class="muted">建议用 VSCode Live Server 打开（支持离线缓存）。</span>
   </footer>
 
   <script src="app.js"></script>
